fix navbar issue, ignore overlap of text for now.

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
   text-decoration: underline;
 }
 
-body {
+#hero {
   background-color: #fa8bff;
   background-image: linear-gradient(
     45deg,
